--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "roboto-fontface": "*",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-axios": "^3.4.1",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.6",
     "vue-template-compiler": "^2.6.14"
   }
 }
