--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
+    "vue-pixi": "^0.1.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
