--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.4.4",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-pixi": "^0.1.1",
