--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
-    "sweetalert2": "^11.4.4",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-pixi": "^0.1.1",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.2",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
